# scenarist

./: .gitignore  CMakeLists.txt  README  README.md  checkPkgs.sh  scenarist  scenarist.py  setup.py
Scenarist/src/: config.py  info.py  runner.py  utility.py
build_scenarist/: __init__.py  config.py  info.py  runner.py  scenario_help_utils.py  utility.py
scenario/: Linux.scenario  Linux_Ubuntu_16.04.scenario
scripts/: Linux.script  Linux_Ubuntu_14.04.script
src/: info.py  runner.py  utility.py
